# django_full_stack_todo

./: README.md
api/: Dockerfile  README.md  pyproject.toml
api/app/: app.py  config.py
api/app/auth/: __init__.py
api/app/auth/controller/: __init__.py  authenticate_user.edgeql
api/app/auth/models/: __init__.py
api/app/db/: __init__.py
api/app/redis_client/: __init__.py
api/app/todo/: __init__.py
api/app/todo/controller/: __init__.py  create.edgeql  delete.edgeql  get.edgeql  update.edgeql
api/app/todo/models/: __init__.py
db/: Dockerfile  README.md
db/dbschema/: default.gel  todo.gel  user.gel
db/dbschema/migrations/: 00001-m1ji7cd.edgeql
devops/: README.md  docker-compose.yml  pyproject.toml
devops/app/: config.py
devops/app/cli/: __init__.py  env.py  service.py  user.py
devops/app/controller/: __init__.py
devops/app/db/: __init__.py
devops/envs/: api.env  cli.env  db.env  ui.env
ui/: Dockerfile  README.md  app.py  config.py  manage.py  pyproject.toml
ui/config/: settings.py
ui/controller/: __init__.py
ui/models/: __init__.py
ui/redis_client/: __init__.py
ui/static/css/: flash_message.css  form.css  login.css  navbar.css  styles.css  table.css
ui/static/js/: home.js  todo.js
ui/templates/: add_todo.html  base.html  delete_todo.html  edit_todo.html  flash_message.html  get_todos.html  head.html  home.html  login.html  navbar.html  select_option.html  todos.html
ui/web/: services.py  urls.py  views.py
ui/web/templates/: add_todos.html  base.html  delete_todo.html  edit_todo.html  flash_message.html  footer.html  get_todos.html  head.html  login.html  navbar.html  select_option.html
ui/web/templatetags/: ui_components.py
