[project]
name = "devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "bcrypt>=5.0.0",
    "click>=8.2.1",
    "cryptography>=45.0.7",
    "edgedb>=2.2.0",
    "gel>=3.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "rich-click>=1.8.9",
    "typer>=0.17.4",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["app"]

[project.scripts]
cli = "app:cli.cli"
