[project]
name = "ui"
version = "0.2.0"
description = "Django Frontend for Todo App"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "django>=5.0.0",
    "django-redis>=5.4.0",
    "requests>=2.32.0",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.0.0",
    "whitenoise[brotli]>=6.7.0",
]